deployment/jobs-ui.service.yml
apiVersion: v1
kind: Service

metadata:
  name: api-jobs-ui
  namespace: default

spec:
  type: ClusterIP
  selector:
    app: api-jobs-ui
    tier: backend
    track: stable
  ports:
    - name: http
      port: 80
      protocol: TCP
