deployment/service.yml
apiVersion: v1
kind: Service

metadata:
  name: api
  namespace: default

spec:
  type: ClusterIP
  selector:
    app: api-varnish
    tier: backend
    track: stable
  ports:
    - name: api
      port: 3000
      protocol: TCP
