deployment/varnish.service.yml
---

apiVersion: v1
kind: Service

metadata:
  name: api-varnish
  namespace: default

spec:
  type: ClusterIP
  selector:
    app: api-varnish
    tier: backend
    track: stable
  ports:
    - name: varnish
      protocol: TCP
      port: 80
